--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -57,4 +57,5 @@ enable_audio_bell no
 # database will be matched.
 select_by_word_characters :@-./_~?&=%+#
 open_url_with default
-term xterm
+#term xterm
+term xterm-kitty
