--- a/kitty/wal.conf
+++ b/kitty/wal.conf
@@ -1,22 +1,30 @@
 foreground   #89eff5
 background   #090c0e
 
-#cursor      #89eff5
-cursor       #349AA0
+ cursor       #349AA0
 
+# black
 color0       #090c0e
 color8       #5fa7ab
+# red
 color1       #9C4B6D
-color9       #2C4B6D
+color9       #E64545
+# green
 color2       #589F5F
-color10      #584E5F
-color3       #C93F42
-color11      #C93F42
+color10      #52CC5E
+# yellow
+color3       #CCCA52
+color11      #CCCA52
+# blue
 color4       #2E6197
 color12      #2E6197
-color5       #4C6FA4
-color13      #4C6FA4
+# magenta
+color5       #834BA3
+color13      #B93DCC
+# cyan
 color6       #4CB0E8
 color14      #4CB0E8
+# white
 color7       #89eff5
 color15      #89eff5
+
